redirect automatiquement à la login page quand session.user == null; safe redirect à referer